- using AssertJ for assertions now - removed r tests - updated mockito and junit